--- a/paper/01-bayes_cpm_mods.Rmd
+++ b/paper/01-bayes_cpm_mods.Rmd
@@ -301,7 +301,7 @@ knitr::include_graphics(file.path(wd,"fig","sim_b_cdf_full.png"))
 knitr::include_graphics(file.path(wd,"fig","sim_b_cdf_cens.png"))
 ```
 
-The results for the conditional posterior median are shown in figures \@ref(fig:simplt-med1) and \@ref(fig:simplt-med2). For both outcomes, the conditional median estimate had a positive bias for both $(X_1=1,X_2=0)$ and $(X_1=1,X_2=1)$ with smaller bias for larger sample sizes. There were negligible differences in average percent bias of the median estimates for the three $\alpha$ concentration parameters
+The results for the conditional posterior median are shown in figures \@ref(fig:simplt-med1) and \@ref(fig:simplt-med2). For both outcomes, the conditional median estimate had a positive bias for both $(X_1=1,X_2=0)$ and $(X_1=1,X_2=1)$ with smaller bias for larger sample sizes. There were negligible differences in average percent bias of the median estimates for the three $\alpha$ concentration parameters.
 
 ```{r simplt-med1, fig.cap="Bias in conditional median for uncensored simulations using probit link", fig.align='center', out.width='90%'}
 knitr::include_graphics(file.path(wd,"fig","sim_b_med_full.png"))
@@ -323,8 +323,7 @@ knitr::include_graphics(file.path(wd,"fig","sim_b_mn_cens.png"))
 
 Figure \@ref(fig:simplt-q20-1) presents the results for conditional 20th percentile in the uncensored simulation data. The estimates are quite biased for the smaller sample sizes. The magnitude of the bias also varies based on the values of the conditioning variables, $X_1$ and $X_2$ with larger bias when the the conditional distribution is further from $\beta_1 = \beta_2 = 0$.
 
-The estimates of the conditional 20th percentile for the censored outcome (fig. \@ref(fig:simplt-q20-2)) show a similar effect as the censored mean. When $(X_1=1,X_2=1)$ the true conditional $Q^{0.2}$ falls below the censoring threshold so the estimated $Q^{0.2}$ is the value assigned to the censored category. This value is biased even with large sample size.
-
+The estimates of the conditional 20th percentile for the censored outcome (fig. \@ref(fig:simplt-q20-2)) show a similar effect as the censored outcome. When $(X_1=1,X_2=1)$ the true conditional $Q^{0.2}$ falls below the censoring threshold so the estimated $Q^{0.2}$ is the value assigned to the censored category. This value is biased even with large sample size.
 
 ```{r simplt-q20-1, fig.cap="Bias in conditional 20th percentile for uncensored simulations using probit link", fig.align='center', out.width='90%'}
 knitr::include_graphics(file.path(wd,"fig","sim_b_q20_full.png"))
@@ -336,9 +335,11 @@ knitr::include_graphics(file.path(wd,"fig","sim_b_q20_cens.png"))
 
 ### Logit link
 
-!!! Start here !!!
+!! combine with probit results and move some to supp?
 
-move some to supp?
+For scenario (2), the average bias in the posterior median for $\beta_1$, $\beta_2$, and $\gamma_{y_k}$ are shown in figures \@ref(fig:simplt-pars3) and \@ref(fig:simplt-pars4). Because the assumed scale of the logit link ($\varepsilon \sim Logistic(0,1)$) does not match the scale from the simulation model ($\varepsilon \sim Logistic(0,1/3)$), the parameter estimates are not on the same scale as the parameters from the generating model.  Assume $Y^*=\beta'X + a\varepsilon$ where $a>0$ is a constant scaling factor with $\varepsilon \sim F_{\varepsilon}$, and $Y=H(Y^*)$ with increasing function $H(t)$. Then $Y=H(\beta'X+a\varepsilon)=H'(\xi'X+\varepsilon)$ where $\xi=a^{-1}\beta$ and $H'(t)=H(at)$ so $Pr(Y \le y|X)=Pr(H'(\xi'X+\varepsilon)\le y|X)=F_{\varepsilon}(H'^{-1}(y)-\xi'X)$. Using a CPM with link function $F_{\varepsilon}^{-1}$ to analyze $Y$ results in estimates of $\xi=a^{-1}\beta$ for the coefficients and $H'^{-1}=a^{-1}H^{-1}$ for the intercept function. In this sense, the parameter estimates are biased. If the estimates are adjusted using the scale factor, $a$, the bias in the parameters is close to 0 for all parameters (make fig & show). However in practice, the value of the scale factor is unknown.
+
+Similar issue with link misspecification
 
 ```{r simplt-pars3, fig.cap="Bias in parameters for uncensored simulations using logit link", fig.align='center', out.width='90%'}
 knitr::include_graphics(file.path(wd,"fig","sim_c_pars_full.png"))
@@ -348,6 +349,7 @@ knitr::include_graphics(file.path(wd,"fig","sim_c_pars_full.png"))
 knitr::include_graphics(file.path(wd,"fig","sim_c_pars_cens.png"))
 ```
 
+Figures \@ref(fig:simplt-cdf3) and \@ref(fig:simplt-cdf4) show the average percent bias in the posterior conditional CDF for scenario (2). For the uncensored outcome, the conditional CDF estimates of $F(y|X_1=1,X_2=1)$ have larger percent bias when $y<e^{0.5}$, especially for the smallest sample sizes and the concentration priors $\boldsymbol{\alpha}=1/(0.8 + 0.35J)$ and $\boldsymbol{\alpha}=1/(2 +(J/3))$. Similar patterns are seen for the the censored outcome, less biased estimates for the CDF at higher $y$ values and larger sample sizes.
 
 ```{r simplt-cdf3, fig.cap="Bias in conditional CDF for uncensored simulations using logit link", fig.align='center', out.width='90%'}
 knitr::include_graphics(file.path(wd,"fig","sim_c_cdf_full.png"))
@@ -357,6 +359,8 @@ knitr::include_graphics(file.path(wd,"fig","sim_c_cdf_full.png"))
 knitr::include_graphics(file.path(wd,"fig","sim_c_cdf_cens.png"))
 ```
 
+The results for the conditional posterior median are shown in figures \@ref(fig:simplt-med3) and \@ref(fig:simplt-med4). For both outcomes, the conditional median estimate had a positive bias for both $(X_1=1,X_2=0)$ and $(X_1=1,X_2=1)$ with smaller bias for larger sample sizes. There were negligible differences in average percent bias of the median estimates for the three $\alpha$ concentration parameters. [identical pattern to scenario (1) - combine!]
+
 ```{r simplt-med3, fig.cap="Bias in conditional median for uncensored simulations using logit link", fig.align='center', out.width='90%'}
 knitr::include_graphics(file.path(wd,"fig","sim_c_med_full.png"))
 ```
@@ -364,6 +368,9 @@ knitr::include_graphics(file.path(wd,"fig","sim_c_med_full.png"))
 ```{r simplt-med4, fig.cap="Bias in conditional median for censored simulations using logit link", fig.align='center', out.width='90%'}
 knitr::include_graphics(file.path(wd,"fig","sim_c_med_cens.png"))
 ```
+
+Figure \@ref(fig:simplt-mn3) presents the average percent bias in the posterior conditional mean for the uncensored simulation outcome at $(X_1=1,X_2=0)$ and $(X_1=1,X_2=1)$. The average percent bias across all simulations was less than 2.5\% for all sample sizes and priors. In contrast, \@ref(fig:simplt-mn4) shows the conditional means for the censored data. For outcomes censored at $Y<1$, a value of $Y=1$ was used in the conditional mean calculation. Using the censoring threshold value for censored observations can result in average percent bias that is higher than the uncensored case depending on where the threshold falls in relation to the true conditional distribution and the value chosen for censored observations. (Similar to probit, but percent bias is lower for uncensored outcome and much lower for censored outcome)
+
 
 ```{r simplt-mn3, fig.cap="Bias in conditional mean for uncensored simulations using logit link", fig.align='center', out.width='90%'}
 knitr::include_graphics(file.path(wd,"fig","sim_c_mn_full.png"))
@@ -373,6 +380,7 @@ knitr::include_graphics(file.path(wd,"fig","sim_c_mn_full.png"))
 knitr::include_graphics(file.path(wd,"fig","sim_c_mn_cens.png"))
 ```
 
+Figure \@ref(fig:simplt-q20-3) presents the results for conditional 20th percentile in the uncensored simulation data. The estimates are positively biased for the smaller sample sizes with more bias for the $\alpha=1/J$ concentration prior. The estimates of the conditional 20th percentile for the censored outcome (fig. \@ref(fig:simplt-q20-4)) show a similar trend as the censored outcome. 
 
 ```{r simplt-q20-3, fig.cap="Bias in conditional 20th percentile for uncensored simulations using logit link", fig.align='center', out.width='90%'}
 knitr::include_graphics(file.path(wd,"fig","sim_c_q20_full.png"))
@@ -382,6 +390,7 @@ knitr::include_graphics(file.path(wd,"fig","sim_c_q20_full.png"))
 knitr::include_graphics(file.path(wd,"fig","sim_c_q20_cens.png"))
 ```
 
+Figures \@ref(fig:simplt-q80-3) and \@ref(fig:simplt-q80-4)) present the estimates of the conditional 80th percentile for the uncensored and censored outcomes. Similar to the 20th percentile estimates, the estimates are positively biased for smaller sample sizes. But in contrast, the estimates using the $\alpha=1/J$ concentration prior are *less* biased compared to the other priors.
 
 ```{r simplt-q80-3, fig.cap="Bias in conditional 80th percentile for uncensored simulations using logit link", fig.align='center', out.width='90%'}
 knitr::include_graphics(file.path(wd,"fig","sim_c_q80_full.png"))
@@ -391,10 +400,11 @@ knitr::include_graphics(file.path(wd,"fig","sim_c_q80_full.png"))
 knitr::include_graphics(file.path(wd,"fig","sim_c_q80_cens.png"))
 ```
 
-
-
 ### Loglog link
-move some to supp?
+
+!!! Start here !!!
+
+!! combine with earlier results and move some to supp?
 
 ```{r simplt-pars5, fig.cap="Bias in parameters for uncensored simulations using loglog link", fig.align='center', out.width='90%'}
 knitr::include_graphics(file.path(wd,"fig","sim_d_pars_full.png"))
